# RIOT-rs

./: laze-project.yml
doc/: support_matrix.yml
examples/http-client/src/: main.rs
examples/storage/src/: main.rs
scripts/cargo-embed/: Embed-defmt.toml  Embed-no-defmt.toml
src/ariel-os-coap/: Cargo.toml
src/ariel-os-coap/src/: stored.rs
src/ariel-os-debug-log/: Cargo.toml
src/ariel-os-debug-log/src/: lib.rs
src/ariel-os-debug/src/: lib.rs
src/ariel-os-storage/: Cargo.toml
src/ariel-os-storage/src/: lib.rs  storage.rs
src/lib/coapcore/: Cargo.toml
src/lib/coapcore/src/: ace.rs  lib.rs  log_helpers.rs  oluru.rs  scope.rs  seccfg.rs  seccontext.rs  time.rs
