[package]
name = "ariel-os-storage"
version = "0.1.0"
license.workspace = true
edition.workspace = true
description = "Ariel OS storage API"

[lints]
workspace = true

[dependencies]
cfg-if = { workspace = true }
embassy-sync = { workspace = true }
once_cell = { workspace = true }
ariel-os-debug = { workspace = true }
ariel-os-hal = { workspace = true, features = ["storage"] }
embedded-storage-async = { workspace = true }
postcard = { version = "1.0.8", features = ["postcard-derive"] }
sequential-storage = { version = "4.0.1" }
serde = { workspace = true, default-features = false }
minicbor = "0.25.1"
heapless = { workspace = true }
minicbor-adapters = "0.0.3"

[target.'cfg(context = "rp")'.dependencies]
embassy-time = { workspace = true, default-features = false }
